<resources>
    <string name="app_name">FireBase Example</string>
    <string name="instantId">my Instant id</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Team</string>
    <string name="title_map">Map</string>
    <string name="title_activity_chat">chatActivity</string>
    <string name="menu_settings">settings</string>
    <string name="menu_themes">themes</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="bot_nav_favourite">favourite</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="maydonlar">fields</string>
    <string name="maydonni_baholang">Bu maydonni baholang</string>
    <string name="fikringizni_bildiring">Fikringizni bildiring</string>
    <string name="baho_va_sharhlar">Baho va sharhlar</string>
    <string name="sharh_topilmadi">hech qanday sharh topilmadi</string>
    <string name="saqlash">Saqlash</string>
    <string name="fikrni_yozing">Fikr-mulohazangizni yozing (ixtiyoriy)</string>
    <string name="fikringizni_yuboring">Fikrlaringizni yuboring (ixtiyoriy)</string>



    <string name="shared_preference_key">com.sample.maydonUz.PREFERENCE_FILE_KEY</string>
    <string name="qidirish">Qidirish</string>
</resources>
