<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/nsv_maydon">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#eeeeee"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_margin="16dp"
                    android:visibility="visible"
                    app:cardCornerRadius="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/iv_first_maydon"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_maydon_nomi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:text="Maydon1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_sharh_maydon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_bahosi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp"
                            tools:text="4.5" />

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="4dp"
                            android:src="@drawable/ic_star" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_sharhlar_soni"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="564 sharh" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:background="#bdbdbd" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_korilganlar_soni"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp"
                            tools:text="236" />

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="4dp"
                            android:src="@drawable/ic_eye" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ko'rilganlar soni" />
                </LinearLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_images_maydonlar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:id="@+id/tv_joylashuvi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="16sp"
                tools:text="Joylashuvi: Yunusobod 8, Sultonali Mashhadiy ko'chasi" />

            <TextView
                android:id="@+id/tv_moljal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="16sp"
                tools:text="Mo'ljal: Tiramisu retuarant" />

            <TextView
                android:id="@+id/tv_tel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="16sp"
                tools:text="tel: +998994012741" />

            <TextView
                android:id="@+id/tv_tel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="16sp"
                tools:text="tel: +998999042741" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:id="@+id/maydonni_baholang"
                android:text="@string/maydonni_baholang"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:id="@+id/tv_fikr_bildiring"
                android:layout_marginTop="4dp"
                android:text="@string/fikringizni_bildiring" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:id="@+id/custom_ratingbar"
                android:layout_marginBottom="32dp">


                <ImageView
                    android:id="@+id/star1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_empty"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/star2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/star2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorBackground"
                    android:src="@drawable/ic_star_empty"
                    app:layout_constraintEnd_toStartOf="@id/star3"
                    app:layout_constraintStart_toEndOf="@id/star1"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/star3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorBackground"
                    android:src="@drawable/ic_star_empty"
                    app:layout_constraintEnd_toStartOf="@id/star4"
                    app:layout_constraintStart_toEndOf="@id/star2"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/star4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorBackground"
                    android:src="@drawable/ic_star_empty"
                    app:layout_constraintEnd_toStartOf="@id/star5"
                    app:layout_constraintStart_toEndOf="@id/star3"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/star5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorBackground"
                    android:src="@drawable/ic_star_empty"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/star4"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/baho_va_sharhlar"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_sharh_topilmadi"
                android:text="@string/sharh_topilmadi"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_maydon_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:backgroundTint="#64dd17"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_call_black_24dp" />
</androidx.constraintlayout.widget.ConstraintLayout>